# STAGATE_Repro

./: README.md  pyproject.toml
data/: .gitkeep
examples/: example_run.py  generate_sample_data.py  reproduce_figures.py
results/: .gitkeep
src/: main.py
stagate/: __init__.py  celltype_snn.py  clustering.py  model.py  preprocessing.py  snn.py  train.py  utils.py  visualization.py
